--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,18 @@
     </head>
     <body>
         <p>Welcome to the chat app</p>
+
+        <ol id="messages">
+
+        </ol>
+
+        <form id="message-form">
+            <input name="message" type="text" placeholder="Message"/>
+            <button>Send</button>
+        </form>
+
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+        <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script lang="javascript" src="/js/index.js"></script>
     </body>
 </html>
