--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <input name="message" type="text" placeholder="Message"/>
             <button>Send</button>
         </form>
-
+        <button id="send-location">Send Location</button>
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script lang="javascript" src="/js/index.js"></script>
