--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         </div>
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script lang="javascript" src="/js/moment.js"></script>
         <script lang="javascript" src="/js/index.js"></script>
     </body>
 </html>
