Add users class and updateListEvent

--- a/public/chat.html
+++ b/public/chat.html
@@ -52,6 +52,7 @@
         <script lang="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script lang="javascript" src="/js/moment.js"></script>
         <script lang="javascript" src="/js/mustache.js"></script>
+        <script lang="javascript" src="/js/deparam.js"></script>
         <script lang="javascript" src="/js/chat.js"></script>
     </body>
 </html>
